# GROOT

backend/: llm.py  main.py  pyproject.toml
backend/clinics/: google.py
backend/payments/: mpesa.py
backend/pinecone_db/: query.py
backend/triaging/: growth_predictor.py  routes.py  treatment_recommender.py
