[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AI backend for ovarian cyst prediction and treatment"
authors = ["Achieng Mary, Laura Gachanja"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.22.0"
requests = "^2.31.0"
pydantic = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
